--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,11 @@
+ztable 0.2.2
+=============
+(6-Oct-2020)
+
+* Bug-fixed(Replace return with return() according to CRAN pollicy)
+
+
+
 ztable 0.2.1
 =============
 (20-Mar-2019)
